--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "football_quiz_api",
+  "name": "films_api",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "server.js",
   "engines": {
     "node": "4.6.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Dmytro Pustovit",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.0",
-    "express": "^4.15.0",
-    "mongodb": "^2.2.24"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "mongodb": "^2.2.31"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
