--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "films_api",
   "version": "0.0.1",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "4.6.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Dmytro Pustovit",
   "dependencies": {
