--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "films_api",
+  "name": "films-api",
   "version": "0.0.1",
-  "description": "",
+  "description": "Api was created as test task at WebbyLab",
   "main": "index.js",
   "engines": {
     "node": "4.6.1"
@@ -12,9 +12,9 @@
   },
   "author": "Dmytro Pustovit",
   "dependencies": {
-    "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
